FIX NavBar Z-index

--- a/src/navbar.css
+++ b/src/navbar.css
@@ -10,7 +10,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 100;
+    z-index: 10000;
     transition: background-color 0.3s ease;
   }
   
